--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
     "manifest_version": 4,
-    "type": "extension",
-    "name": "插件模板",
-    "slug": "plugin_template",
-    "description": "LiteLoaderQQNT的插件模板",
-    "version": "0.1.0",
-    "icon": "./icon.png",
+    "type": "exension",
+    "name": "animate",
+    "slug": "animate",
+    "description": "LiteLoaderQQNT 主题 动画 可定制",
+    "version": "1.0.0",
+    "icon": "./res/icon.png",
     "authors": [
         {
-            "name": "LiteLoaderQQNT",
-            "link": "https://github.com/LiteLoaderQQNT"
+            "name": "Adoin",
+            "link": "https://github.com/adoin"
         }
     ],
     "platform": [
@@ -18,16 +18,16 @@
         "darwin"
     ],
     "injects": {
-        "renderer": "./src/renderer.js",
-        "main": "./src/main.js",
-        "preload": "./src/preload.js"
+        "renderer": "./renderer.js",
+        "main": "./main.js",
+        "preload": "./preload.js"
     },
     "repository": {
-        "repo": "LiteLoaderQQNT/Plugin-Template",
-        "branch": "main",
-        "release": {
-            "tag": "0.1.0",
-            "file": "Plugin-Template.zip"
+        "repo": "adoin/QQNT-animation",
+        "branch": "master",
+        "use_release": {
+            "tag": "latest",
+            "file": "QQNT-animation.zip"
         }
     }
 }
